Applications/Forgejo/components/_forgejo/resources/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/component: 'application'
  annotations:
    reloader.stakater.com/search: 'false'  # Enables search mode (only reloads if matching secrets/configMaps are found)
spec:
  revisionHistoryLimit: 3
  serviceName: forgejo
  selector:
    matchLabels:
      app.kubernetes.io/component: 'application'
  replicas: 0
  persistentVolumeClaimRetentionPolicy:
    whenScaled: Retain
    whenDeleted: Retain
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application'
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:0.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 2Gi
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
            - containerPort: 2222
              protocol: TCP
              name: ssh
          startupProbe:
            httpGet:
              path: /api/healthz
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - mountPath: /data
              name: forgejo-data
            - mountPath: /etc/gitea
              name: forgejo-etc
            - mountPath: /tmp
              name: forgejo-tmp
      volumes:
        - name: forgejo-etc
          emptyDir: {}
        - name: forgejo-tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: forgejo-data
        labels:
          app.kubernetes.io/component: 'application'
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn-retain
        resources:
          requests:
            storage: 0Gi
