Applications/Forgejo/components/_forgejo/resources/service-ssh.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  labels:
    app.kubernetes.io/component: 'application'
spec:
  loadBalancerIP: '0.0.0.0'
  selector:
    app.kubernetes.io/component: 'application'
  ports:
    - protocol: TCP
      port: 22
      targetPort: 2222
      name: ssh
  type: LoadBalancer
  externalTrafficPolicy: Local
