Applications/Forgejo/components/_forgejo/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/component: 'application'
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: CHANGE_ME
      kind: Rule
      middlewares:
        - name: chain-default
          namespace: traefik-system
      services:
        - name: forgejo
          port: 3000
          passHostHeader: true
  tls:
    secretName: forgejo-certificate
